# img2cmap

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.rst  fly.toml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  github-actions.yml
.streamlit/: config.toml
ci/: requirements.txt
docs/: conf.py  installation.rst  usage.rst
docs/reference/: img2cmap.rst  index.rst
src/img2cmap/: __init__.py  convert.py
streamlit/: app.py  requirements.txt
tests/: test_img2cmap.py
tests/urls/: nba-logos.txt
