[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
    "matplotlib",
    "scikit-learn",
    "numpy",
    "pillow",
    "kneed"
]
[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "requests",
]
[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = false
